tests/NormalTests/paczka1/small_fuzzy/39316237.err
Error in line 7: hNT S727 132,24
Error in line 15: 4Cdc A732 58,6
